<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_3"
    tools:context=".BiodataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="35dp"
        android:paddingTop="40dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_panggilan_kamu"
            android:textColor="@color/black"
            android:textSize="@dimen/ukuran_label_biodata"
            android:fontFamily="@font/nunito_bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/hint_nama_panggilan"
            android:textColorHint="@color/white_1"
            android:textColor="@color/white_1"
            android:backgroundTint="@color/white_1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_18"
            android:text="@string/umur_kamu"
            android:textColor="@color/black"
            android:textSize="@dimen/ukuran_label_biodata"
            android:fontFamily="@font/nunito_bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/hint_umur"
            android:textColorHint="@color/white_1"
            android:textColor="@color/white_1"
            android:backgroundTint="@color/white_1"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="70dp"
        android:layout_weight="4">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selanjutnya"
            android:textAllCaps="false"
            android:fontFamily="@font/rubik_regular"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="@dimen/ukuran_text_button"
            android:textColor="@color/black_3"
            android:background="@drawable/bg_btn"/>
    </RelativeLayout>

</LinearLayout>