<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_3"
    tools:context=".LoginCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingHorizontal="35dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kode_keluarga"
            android:textColor="@color/black_3"
            android:textSize="36sp"
            android:fontFamily="@font/nunito_bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ketikkan_kode_keluarga"
            android:textColor="@color/black_3"
            android:textSize="18sp"
            android:fontFamily="@font/rubik_regular"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_marginVertical="25dp"
            android:layout_height="60dp"
            android:text="A1B2C3"
            android:textColor="@color/black_3"
            android:fontFamily="@font/rubik_regular"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColorHint="@color/black_3"
            android:background="@drawable/bg_edit_text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kalimat_persetujuan"
            android:textColor="@color/black_3"
            android:textSize="11sp"
            android:textAlignment="center"
            android:fontFamily="@font/rubik_regular"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textAllCaps="false"
            android:fontFamily="@font/rubik_regular"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="@dimen/ukuran_text_button"
            android:textColor="@color/black_3"
            android:background="@drawable/bg_btn"
            android:layout_marginTop="15dp"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:paddingHorizontal="36dp"
        android:background="@drawable/bg_layout_btn">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pertanyaan_kepunyaan_kode_keluarga"
                android:textColor="@color/gunmetal"
                android:textSize="18dp"
                android:fontFamily="@font/rubik_regular"
                android:layout_gravity="center"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/mulai"
                android:textAllCaps="false"
                android:fontFamily="@font/rubik_regular"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="@dimen/ukuran_text_button"
                android:textColor="@color/white_3"
                android:background="@drawable/bg_btn_blue"/>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>