<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white_3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_get_start_timitory"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_main_1"
                android:layout_gravity="center"
                android:fontFamily="@font/rubik_regular"
                android:textStyle="bold"
                android:textSize="26sp"
                android:textColor="@color/black_3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_main_2"
                android:layout_gravity="center"
                android:fontFamily="@font/rubik_regular"
                android:textStyle="bold"
                android:textSize="26sp"
                android:textColor="@color/black_3"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:paddingHorizontal="36dp"
        android:background="@drawable/bg_layout_btn">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mulai"
            android:textAllCaps="false"
            android:fontFamily="@font/rubik_regular"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="@dimen/ukuran_text_button"
            android:textColor="@color/black_3"
            android:background="@drawable/bg_btn"/>
    </RelativeLayout>

</LinearLayout>